src/cli/snapshots/rtx__cli__local__tests__local_multiple_versions-2.snap
---
source: src/cli/local.rs
expression: output
---
rtx ~/cwd/.test-tool-versions tiny@2 tiny@1 tiny@3
