src/cli/snapshots/rtx__cli__local__tests__local_multiple_versions-3.snap
---
source: src/cli/local.rs
expression: output
---
~/data/installs/tiny/2.1.0/bin
~/data/installs/tiny/1.1.0/bin
~/data/installs/tiny/3.1.0/bin
~/data/installs/dummy/ref-master/bin
