src/cli/snapshots/rtx__cli__local__tests__local_remove-3.snap
---
source: src/cli/local.rs
expression: output
---
#python 3.11.1 3.10.9 # foo
shellcheck 0.9.0
shfmt      3.5.1 # test comment
#nodejs 18.13.0
nodejs     system

